--- a/Autobus/View/YolcuDüzenView.xaml
+++ b/Autobus/View/YolcuDüzenView.xaml
@@ -69,7 +69,7 @@
                                 RenderTransformOrigin="0.5,0.5" />
                             <ComboBox x:Name="CbAraç"
                                 VerticalContentAlignment="Center"
-                                IsEnabled="False"
+                                d:Width="200" IsEnabled="False"
                                 ItemTemplate="{StaticResource AraçTemplate}"
                                 ItemsPanel="{StaticResource ComboBoxItemsVirtualizedPanel}"
                                 ItemsSource="{Binding Otobüs.Araçlar.Araç, Source={StaticResource MainViewModel}}"
